SMYS-140 - Fixed the header overlap on the iPhone.

--- a/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
+++ b/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
@@ -1622,7 +1622,7 @@ article.homelife-services {
 		&.platinum {
 			background-color: #0971ce;
 			h3 {
-				width: 85%;
+				padding-right: 70px;
 			}
 			.savings {
 				background-color: #0971ce;
